# internboot-task3

./: README.md  Task3.ipynb  main.py  pyproject.toml
models/: DecisionTreeRegressor (1).pkl  LGBMRegressor (1).pkl  LinearRegression (1).pkl  XGBRegressor (1).pkl
preprocessor/: scaler.pkl
