[project]
name = "task3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lightgbm>=4.6.0",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "st-gsheets-connection>=0.1.0",
    "streamlit>=1.51.0",
    "xgboost>=3.1.1",
]
